--- a/travis.yml
+++ b/travis.yml
@@ -1,3 +1,7 @@
-test:
-  override:
-    - php vendor/codeception/codeception/codecept run
+language: php
+#rvm:
+ #- 2.2
+ #- jruby
+ #- rbx-2
+# uncomment and edit the following line if your project needs to run something other than `rake`:
+# script: bundle exec rspec spec
